[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
quinn-proto = "0.11"
futures = "0.3"
anyhow = "1.0.22"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }

