[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
quinn-proto = "0.11"
futures = "0.3"
bincode = "1.3"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
anyhow = "1.0.22"
