[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
quinn-proto = "0.11"
futures = "0.3"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
anyhow = "1.0.22"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
